# lattice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  setup-server.sh
client/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
client/src/: App.tsx  recovery.test.ts  recovery.ts  styles.css
client/src/api/: client.ts  protocol.ts
client/src/crypto/: index.ts
crypto/: Cargo.toml
crypto/src/: aead.rs  envelope.rs  errors.rs  hash.rs  kem.rs  lib.rs  session.rs  types.rs  wasm.rs  x25519.rs
nginx/: default.conf  security-headers.conf
scripts/: build-wasm.sh  dev.sh
server/: Cargo.toml
server/src/: limits.rs  main.rs
server/src/session/: mod.rs
server/src/ws/: protocol.rs
