[package]
name = "lattice-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["http1", "json", "macros", "tokio", "ws"] }
futures-util = "0.3"
http = "1.3"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
